# hilti-vggt-runner

./: .gitignore  README.md  pyproject.toml
configs/: eval_floor1_2025-05-05_run1.yaml  eval_floor_ug1_2025-06-18_multiview.yaml  eval_floor_ug1_2025-06-18_run1_rosbag_dense.yaml  hilti_floor1_2025-05-05_run1.yaml  hilti_floor1_2025-05-05_run1_vggt_front_level_300.yaml  hilti_floor1_2025-05-05_run1_vggt_yaw4_frame_major_300.yaml  hilti_floor1_2025-05-05_run1_vggt_yaw4_view_major_300.yaml  hilti_floor_ug1_run1.yaml  hilti_floor_ug1_run1_rosbag.yaml  hilti_floor_ug1_run1_rosbag_dense.yaml  hilti_floor_ug1_run1_vggt_front_fixed_300.yaml  hilti_floor_ug1_run1_vggt_front_level_300.yaml  hilti_floor_ug1_run1_vggt_yaw4_frame_major_300.yaml  hilti_floor_ug1_run1_vggt_yaw4_view_major_300.yaml  local_paths.yaml  paths.example.yaml
scripts/: export_results.py  inspect_pointcloud.py  prepare_hilti_data.py  run_vggt_on_sequence.py
scripts/evaluation/: evaluate_floorplan.py  evaluate_trajectory.py  prepare_multiview_eval_inputs.py  run_full_evaluation.py
scripts/preprocessing/: extract_hilti_frames.py
scripts/reconstruction/: local_to_global_pointcloud.py
src/hilti_vggt_runner/: __init__.py  config.py  export.py  prepare.py  rosbag.py  run.py  views.py
src/hilti_vggt_runner/evaluation/: __init__.py  align.py  artifacts.py  config.py  floorplan.py  multiview.py  pipeline.py  plotting.py  pointcloud.py  poses.py  report.py  trajectory.py
tests/: __init__.py  support.py  test_config.py  test_evaluation.py  test_export.py  test_prepare.py
